Changing the line to localhost:8080 just to make sure it works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.datasource.password=postgres
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
-shortener.url=http://shor.rt/
+shortener.url=http://locahost:8080/
 
