Adding the ability to read supported protocols with app property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,6 @@ spring.datasource.password=postgres
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
-shortener.url=http://locahost:8080/
+shortener.url-prefix=http://locahost:8080/
+shortener.supported-protocols=http,https,ftp
 
