--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,15 @@ services:
           - POSTGRES_USER=postgres
           - POSTGRES_PASSWORD=postgres
           - POSTGRES_DB=postgres
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: com.stlim/shortener:latest
+    ports:
+      - "8080:8080"
+      - "5005:5005"
+    environment:
+      - JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,address=5005,server=y,suspend=n
+
