--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.datasource.password=postgres
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
-shortener.url-prefix=http://locahost:8080/
+shortener.url-prefix=http://localhost:8080/
 shortener.supported-protocols=http,https,ftp
 
